--- a/src/Pages/Menu/Item/item.scss
+++ b/src/Pages/Menu/Item/item.scss
@@ -49,15 +49,21 @@
         .info-text {
             position: absolute;
             opacity: 0;
-            background-color: #ffffffdb;
+            visibility: hidden;
+            background-color: #ffffff;
             padding: 10px;
             color: black;
-            top: -205px;
-            left: 100px;
-
+            bottom: 180px;
+            min-width: 150%;
+            max-width: 170%;
+            overflow: auto;
+            left: 80px;
+            border-radius: 15px;
+            z-index: 60;
             transition: all 0.2s ease-in-out;
             &.active {
                 opacity: 1;
+                visibility: visible;
             }
         }
 
